# ShearLayer

./: .gitignore  README.md  average_normalized_vel_profile.m  calculate_growth_rate.m  comparison_view.m  data_key.m  find_avg_vel.m  find_negative_colorplot_vals.m  find_splitter_idx.m  getInfo.asv  getInfo.m  getMiddle.m  getMiddleBetter.m  get_CFD_Data.m  get_FOV_Data.m  get_expanded_CFD_data.m  get_profiles.m  grab_all_data.m  main.m  momentumThickness.m  plotThicknesses.m  plot_13.m  plot_avg_vel_profile_comparison.m  plot_colorplot.m  plot_normalized_vel.asv  plot_normalized_vel.m  plot_normalized_vels.asv  plot_normalized_vels.m  plot_vels.m  plotter.m  read_raw_EMP_data.m  shearLayerThickness.asv  shearLayerThickness.m  unstructured_reader.m  vorticityThickness.m
matlab_scripts/: comparison_view.m  find_avg_vel.m  find_normed_gr.m  getInfo.m  main.m  plot_all_profiles.m  plot_avg_vel_profile_comparison.m  plot_colorplot.m  plot_normalized_vel.m  plot_vels.m  read_raw_EMP_data.m  thickness.m
periodic_shear_flow/high_res_les/: CMakeLists.txt  HelloWorld.cpp  RANS_k_epsilon.cpp  input_compressible_navier_stokes.yml  input_k_epsilon.yml  periodic_shear.h
